force-app/main/halwaKadai/objects/Product2/fields/HomePage_Visible__c.field-meta.xml
<CustomField>
    <fullName>HomePage_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HomePage_Visible</label>
    <type>Checkbox</type>
</CustomField>