force-app/main/halwaKadai/objects/Product2/fields/Image_uploaded_to_Github__c.field-meta.xml
<CustomField>
    <fullName>Image_uploaded_to_Github__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Image uploaded to Github</label>
    <type>Checkbox</type>
</CustomField>