force-app/main/halwaKadai/objects/Product2/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>