force-app/main/halwaKadai/objects/Product2/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best Seller</fullName>
            </value>
            <value>
                <fullName>Popular</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Trending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>