force-app/main/halwaKadai/objects/Product2/recordTypes/HalwaShop.recordType-meta.xml
<RecordType>
    <fullName>HalwaShop</fullName>
    <active>true</active>
    <label>HalwaShop</label>
</RecordType>