force-app/main/halwaKadai/objects/Product2/listViews/All_Halwa.listView-meta.xml
<ListView>
    <fullName>All_Halwa</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Image_URL__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.HalwaShop</value>
    </filters>
    <label>All Halwa</label>
</ListView>